Ajusta débitos técnicos do sonar.